<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002A69"
    android:padding="16dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Logo"
        android:src="@drawable/my_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />


    <!-- Sign In Form -->

    <!-- Register Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_edges"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/editbox_background"
            android:hint="ID"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="#000000"
            android:padding="12dp"
            android:text="Sign In"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <!-- Register Form (Initially Hidden) -->
    <Button
        android:id="@+id/btn_show_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="193dp"
        android:background="#000000"
        android:padding="12dp"
        android:text="Register"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_show_register"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="@drawable/rounded_edges"
        android:padding="16dp"
        android:elevation="4dp"
        android:visibility="gone"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name"
            android:textColorHint="#000000"
            android:background="@android:drawable/editbox_background"
            android:padding="12dp"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name"
            android:textColorHint="#000000"
            android:background="@android:drawable/editbox_background"
            android:padding="12dp"
            android:inputType="textPersonName"
            android:layout_marginBottom="25dp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:textColorHint="#000000"
            android:background="@android:drawable/editbox_background"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textColor="#FFFFFF"
            android:background="#000000"
            android:padding="12dp" />
    </LinearLayout>

    <!-- Slogan -->
    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FFSmart fridge slogan"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/powered_by" />

    <!-- Powered by Text -->
    <TextView
        android:id="@+id/powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Powered by SEAmless Solutions"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

</RelativeLayout>
